--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,9 @@
             <artifactId>poi-ooxml</artifactId>
             <version>4.0.1</version>
         </dependency>
+
+        <!-- Импорт моделей Keras TenzerFlow -->
+
     </dependencies>
 
 <build>
