--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,22 @@
         </dependency>
 
         <!-- Импорт моделей Keras TenzerFlow -->
+<!--        <dependency>-->
+<!--            <groupId>org.deeplearning4j</groupId>-->
+<!--            <artifactId>deeplearning4j-modelimport</artifactId>-->
+<!--            <version>1.0.0-beta7</version>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>org.tensorflow</groupId>-->
+<!--            <artifactId>tensorflow</artifactId>-->
+<!--            <version>1.15.0</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.deeplearning4j</groupId>-->
+<!--            <artifactId>deeplearning4j-nn</artifactId>-->
+<!--            <version>1.0.0-beta7</version>-->
+<!--        </dependency>-->
 
     </dependencies>
 
